# memoryLayer

./: .gitignore  analyze_hopfield_vit.py  config_memory_vit.yaml  config_simple.yaml  note.md  pyproject.toml  train.py  train_memory_vit.py
configs/: default.yaml  model.yaml  project.yaml  training.yaml
data/: cifar.py  rafdb.py
docs/: CONFIG.md  MODEL_ARCHITECTURE.md  README.md  analysis.md  implementation.md
models/: HopfieldLayer.py  __init__.py  memory_vit.py  vit_blocks.py
models/baselines/: __init__.py  linear_probe.py  vpt.py
models/baselines/continual/: __init__.py
paper/: loopedllm.md  meshmemory.md  modern_hopfield_layer.md  mor.md
training/: __init__.py
